fix: adjust letter spacing for Lekton font family

--- a/_sass/training.scss
+++ b/_sass/training.scss
@@ -66,7 +66,7 @@
         h2 {
           font-family: $lekton;
           font-size: 3rem;
-          letter-spacing: 0.1em;
+          letter-spacing: 0.04em;
           margin: 0;
         }
 
